[package]
name = "tantivy-stemmers"
version = "0.2.0"
edition = "2021"
keywords = ["tantivy", "tokenizer", "stemmer"]
categories = ["text-processing"]
license = "BSD-3-Clause"
license-file = "LICENSE"
authors = ["Testuj.to s.r.o. <technology@testuj.to>", "Patrik Šimunič"]
description = "A collection of Tantivy stemmer tokenizers"
repository = "https://github.com/testuj-to/tantivy-stemmers"

[features]
default = ["english-porter-2"]
arabic = []
armenian-mkrtchyan = []
basque = []
catalan = []
czech-dolamic-aggressive = []
czech-dolamic-light = []
danish = []
dutch = []
english-lovins = []
english-porter = []
english-porter-2 = []
estonian-freienthal = []
finnish = []
french = []
german = []
greek = []
hindi-lightweight = []
hungarian = []
indonesian-tala = []
irish-gaelic = []
italian = []
lithuanian-jocas = []
nepali = []
norwegian-bokmal = []
portuguese = []
romanian-heidelberg = []
romanian-tirdea = []
romanian = []
russian = []
spanish = []
swedish = []
turkish-cilden = []
yiddish-urieli = []

[dependencies]
serde = "1.0.199"
serde_derive = "1.0.199"
tantivy-tokenizer-api = "0.3.0"

[dev-dependencies]
tantivy = "0.22.0"
