[package]
name = "tantivy-stemmers"
version = "0.2.0"
edition = "2021"
keywords = ["tantivy", "tokenizer", "stemmer"]
categories = ["text-processing"]
license = "BSD-3-Clause"
license-file = "LICENSE"
authors = ["Testuj.to s.r.o. <technology@testuj.to>", "Patrik Šimunič"]
description = "A collection of Tantivy stemmer tokenizers"
repository = "https://github.com/testuj-to/tantivy-stemmers"

[features]
default = ["english_porter_2"]
arabic = []
armenian_mkrtchyan = []
basque = []
catalan = []
czech_dolamic_aggressive = []
czech_dolamic_light = []
danish = []
dutch = []
english_lovins = []
english_porter = []
english_porter_2 = []
estonian_freienthal = []
finnish = []
french = []
german = []
greek = []
hindi_lightweight = []
hungarian = []
indonesian_tala = []
irish_gaelic = []
italian = []
lithuanian_jocas = []
nepali = []
norwegian_bokmal = []
portuguese = []
romanian_heidelberg = []
romanian_tirdea = []
romanian = []
russian = []
spanish = []
swedish = []
turkish_cilden = []
yiddish_urieli = []

[dependencies]
serde = "1.0.199"
serde_derive = "1.0.199"
tantivy-tokenizer-api = "0.3.0"

[dev-dependencies]
tantivy = "0.22.0"
