[package]
name = "tantivy-stemmers"
version = "0.4.0"
edition = "2021"
keywords = ["tantivy", "tokenizer", "stemmer"]
categories = ["text-processing"]
license = "BSD-3-Clause"
license-file = "LICENSE"
authors = ["Testuj.to s.r.o. <technology@testuj.to>", "Patrik Šimunič"]
description = "A collection of Tantivy stemmer tokenizers"
repository = "https://github.com/testuj-to/tantivy-stemmers"

[features]
default = ["english_porter_2"]
arabic = []
armenian_mkrtchyan = []
basque = []
catalan = []
czech_dolamic_aggressive = []
czech_dolamic_light = []
danish = []
dutch = []
english_lovins = []
english_porter = []
english_porter_2 = []
estonian_freienthal = []
finnish = []
french = []
german = []
greek = []
hindi_lightweight = []
hungarian = []
indonesian_tala = []
irish_gaelic = []
italian = []
lithuanian_jocas = []
nepali = []
norwegian_bokmal = []
polish_yarovoy = []
polish_yarovoy_unaccented = []
portuguese = []
romanian = []
romanian_heidelberg = []
romanian_tirdea = []
russian = []
spanish = []
swedish = []
turkish_cilden = []
yiddish_urieli = []

[dependencies]
aho-corasick = "1.1.3"
precis-core = "0.1.9"
precis-profiles = "0.1.10"
serde = "1.0.199"
serde_derive = "1.0.199"
tantivy-tokenizer-api = "0.3.0"
unicode-normalization = "0.1.23"

[dev-dependencies]
tantivy = "0.22.0"
test_utils = { path = "./tests/utils" }
